# ezmsg-bthid

./: LICENSE  README.md  pyproject.toml
src/ezmsg/bthid/: btdaemon.py  command.py  config.py  ezmsg-bthid.conf  ezmsg-bthid.service  hid.py  hidoutput.py  install.py  sdp.xml  server.py  server_sync.py  util.py
src/ezmsg/bthid/device/: __init__.py  hid.py  keyboard.py  mouse.py  touch.py
src/ezmsg/bthid/examples/: absolute_pointer.py  absolute_pointer_direct.py  rel_mouse.py  type_message.py
tests/: test_config.py  test_install.py
