[tool.poetry]
name = "ezmsg-bthid"
version = "0.1.0"
description = "Virtual HID via Bluetooth for ezmsg"
authors = ["Griffin Milsap <griffin.milsap@jhuapl.edu>"]
readme = "README.md"
homepage = "https://github.com/griffinmilsap/ezmsg-bthid"
packages = [
  { include = "ezmsg", from = "src" }
]

[tool.poetry.scripts]
ezmsg-bthid = "ezmsg.bthid.command:cmdline"

[tool.poetry.dependencies]
python = "^3.9"
dbus-next = "^0.2.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "*"
pytest-cov = "*"
numpy = "^1.24.2"
flake8 = "*"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src", "tests"]
testpaths = "tests"

[build-system] 
requires = ["poetry-core"] 
build-backend = "poetry.core.masonry.api"
